// This package contains a service allowing you to use vtctld as a
// proxy for vt commands.

syntax = "proto3";

package vtctlservice;

import "vtctl.proto";

// Service Vtctl allows you to call vt commands through gRPC.
service Vtctl {
  rpc ExecuteVtctlCommand (vtctl.ExecuteVtctlCommandRequest) returns (stream vtctl.ExecuteVtctlCommandResponse) {};
}
